# lightdm-qtquick-greeter

./: .gitignore  CMakeLists.txt  LICENSE  Login.qml  README.md  lightdm-qml-greeter.desktop  lightdm-qtquick-greeter.spec  main.cpp  main.qml  qml-lightdm-test_ja_JP.ts  rpm_build.sh  sessionsmodel_tintin.h  settingsmanager.cpp  settingsmanager.h  usermanager_qml.cpp  usermanager_qml.h  デザイン案.psd  デザイン案.xcf
.github/workflows/: package.yml
arch/lightdm-qtquick-greter-git/: .SRCINFO  .gitignore  PKGBUILD
design/: デザイン案.psd
misc/: lightdm-qtquick-greeter.desktop  lightdm-qtquick-greeter.json
src/: CMakeLists.txt  Login.qml  defaultsessionmanager.cpp  defaultsessionmanager.h  lightdm-qtquick-greeter_ja_JP.ts  main.cpp  main.qml  qml.qrc  sessionmodelplugin.h  sessionsmodel_tintin.cpp  usermanager.cpp  usermanager.h  usermanager_qml.cpp  usermanager_qml.h
