cmake_minimum_required(VERSION 3.14)
project(lightdm-qtquick-greeter LANGUAGES CXX)
add_subdirectory(src)
if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  set(CMAKE_INSTALL_PREFIX "" CACHE PATH "..." FORCE)
endif()
INSTALL(TARGETS lightdm-qtquick-greeter RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/usr/bin)
INSTALL(FILES misc/lightdm-qtquick-greeter.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/usr/share/xgreeters/ PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
INSTALL(FILES misc/lightdm-qtquick-greeter.json DESTINATION ${CMAKE_INSTALL_PREFIX}/etc/lightdm/ PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
include (InstallRequiredSystemLibraries)
set (CPACK_RESOURCE_FILE_LICENSE
     "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
execute_process (COMMAND date +%Y%m%d OUTPUT_VARIABLE CMAKE_VERSION OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process (COMMAND git rev-parse --short HEAD OUTPUT_VARIABLE CMAKE_REVISION OUTPUT_STRIP_TRAILING_WHITESPACE)
set (CPACK_PACKAGE_VERSION_MAJOR "${CMAKE_VERSION}")
set (CPACK_PACKAGE_VERSION_MINOR "${CMAKE_REVISION}")
include (CPack)